--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CARLOS ALADIM CORDEIRO JR</title>
-  <link href="css/STYLES.CSS" rel="stylesheet">
+  <link href="https://90541111262.github.io/3-assignment/styles.css" rel="stylesheet"/>
 </head>
 <body>
   <header>
