--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <h1><i>WELCOME TO MY PAGE</i></h1>
   </header>
-  <img src="images/CarlosAladim.png" id="my-image" alt="My Image" width="250px" height="300px">
+  <img src="https://github.com/90541111262/3-assignment/blob/ea9986755a8d5fb3b2da4f3a36ef3c54d494a55a/CarlosAladim.png" id="my-image" alt="My Image" width="250px" height="300px">
   <p>
     <h2 class="site-title">MY HOBBIES</h2>
     <ul>
