--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <h1><i>WELCOME TO MY PAGE</i></h1>
   </header>
-<img src="https://github.com/90541111262/3-assignment/blob/add630c53943da82c73d13f4ca30101510fd11d8/CarlosAladim.png" id="my-image" alt="My Image" width="250px" height="300px">
+    <img src="https://raw.githubusercontent.com/90541111262/3-assignment/blob/add630c53943da82c73d13f4ca30101510fd11d8/CarlosAladim.png" id="my-image" alt="My Image" width="250px" height="300px">
     <p>
     <h2 class="site-title">MY HOBBIES</h2>
     <ul>
@@ -27,3 +27,6 @@
   <footer>&copy; CARLOS ALADIM. 2023. ALL RIGHTS RESERVED.</footer>
 </body>
 </html>
+
+
+
