--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CARLOS ALADIM CORDEIRO JR</title>
-  <link href="https://github.com/90541111262/3-assignment/blob/2661c100ce6cfacd89adf71888c224436fd27302/styles.css" rel="stylesheet"/>
+  <link href="css/STYLES.CSS" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1><i>WELCOME TO MY PAGE</i></h1>
   </header>
-    <img src="https://raw.githubusercontent.com/90541111262/3-assignment/blob/add630c53943da82c73d13f4ca30101510fd11d8/CarlosAladim.png" id="my-image" alt="My Image" width="250px" height="300px">
-    <p>
+  <img src="images/CarlosAladim.png" id="my-image" alt="My Image" width="250px" height="300px">
+  <p>
     <h2 class="site-title">MY HOBBIES</h2>
     <ul>
       <li>I like to play guitar;</li>
@@ -20,13 +20,15 @@
       <li>I love traveling with my wife and daughter.</li>
       <li>I love watching YouTube videos of musical instrument construction.</li>
     </ul>
+
     <p>&ensp;</p>
+
+
   </p>
   <a href="notes.html">Click here to navigate HTML TAGS page</a>
+
   <p>&ensp;</p>
+
   <footer>&copy; CARLOS ALADIM. 2023. ALL RIGHTS RESERVED.</footer>
 </body>
 </html>
-
-
-
