--- a/notes.html
+++ b/notes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     HTML TAGS
-<link href="https://github.com/90541111262/3-assignment/blob/f445b5d83b22bc3e353e832e02a637b0fdf3471c/styles.css" rel="stylesheet"
+<link href="css/styles.css" rel="stylesheet"
 </head>
 <body>
   <dl>
